--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,8 @@
-# 应用服务 WEB 访问端口
+# 公共配置文件
+spring:
+  application:
+    name: guooj-code-sandbox
+  profiles:
+    active: dev
 server:
   port: 8090
